--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ input:focus, select:focus {outline:none;border-color:#667eea;box-shadow:0 0 0 3p
 <body>
 
 <div class="container">
-    <h1>🚗📦 Delivery Calculator 🚀💰</h1>
+    <h1>Delivery Calculator </h1>
 
     <div class="input-group">
         <label for="distance">🛣 Distance (miles):</label>
