--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🚗📦 Delivery Calculator 🚀💰</title>
+<title>Delivery Calculator</title>
 <style>
 * {margin:0;padding:0;box-sizing:border-box;}
 body {
@@ -81,7 +81,7 @@ input:focus, select:focus {outline:none;border-color:#667eea;box-shadow:0 0 0 3p
 <body>
 
 <div class="container">
-    <h1>🚗📦 Delivery Calculator 🚀💰</h1>
+    <h1>Delivery Calculator</h1>
     <p class="site-name">🌐 math.w3w.delivery</p>
 
     <div class="input-group">
